# emd-desafio-junior-data-scientist

./: Home.py  README.md  pyproject.toml
dados/: bairros_mais_chamados_01042023.csv  chamados_sem_associacao_01042023.csv  clima_favoravel_mensal.csv  media_diaria_eventos.csv  subprefeitura_mais_chamados_01042023.csv  temperatura_media_mensal.csv  tempo_predominante_mensal.csv  tipo_chamados_01042023.csv  total_chamados_01042023.csv  weather_daily.csv
pages/: 1_📊_Analise-Bases-Bigquery.py  2_🐍_Analise-Api.py
solucao-exercicios/: analise_api.ipynb  analise_python.ipynb  analise_sql.sql
streamlit-env/: pyproject.toml
