[tool.poetry]
name = "emd-desafio-junior-data-scientist"
version = "0.1.0"
description = "Projeto do desafio técnico para vaga de Cientista de Dados Jr - Prefeitura do Rio"
authors = ["vorges-data <vinicius.jborges36@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
streamlit = "^1.37.1"
pandas = ">=1.3.5,<2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
