[tool.poetry]
name = "emd-desafio-junior-data-scientist"
version = "0.1.0"
description = "Projeto do desafio técnico para vaga de Cientista de Dados Jr - Prefeitura do Rio"
authors = ["vorges-data <vinicius.jborges36@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.11"
numpy = "1.24.4"
basedosdados = "^1.6.11"
requests = "^2.32.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

